import org.gradle.api.provider.Property

plugins {
    id 'java'
    id 'java-library'
}
project.version = '0.1.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(15)
    }
}

compileJava {
    // reverting to java 8
    //options.compilerArgs += ['--enable-preview']
    options.release = 8
}

test {
    testLogging.showStandardStreams = true
}

jar {
    manifest {
        attributes 'Class-Path' : 'absfrontend.jar'
    }
}



// For now this should work, but the build should depend on
// the source of the git repo; fetch, build and use.


repositories {
    flatDir {
        dirs 'libs'
    }
}

dependencies {
    testImplementation 'junit:junit:4.13.1'
    testImplementation group: 'org.hamcrest', name: 'hamcrest-core', version: '1.3'
    //implementation 'info.picocli:picocli:4.5.2'
    //annotationProcessor 'info.picocli:picocli-codegen:4.5.2'
    implementation files('libs/absfrontend.jar')
}
